# arcium-pixels

./: .env.example  .gitignore  README.md  index.html  other-img.txt  script.js  style.css
app/: config.example.js  config.js  index.html  script.js  style.css
docs/: SOLANA_ARCIUM_BLUEPRINT.md  WEBSITE_FULL_DOCUMENTATION.md  note.txt
services/indexer/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
services/indexer/scripts/: demo-policy-flow.js  migrate.js
services/indexer/sql/: schema.sql
services/indexer/src/: arcium.js  config.js  db.js  indexer.js  policy.js  server.js  solana.js
solana/: Anchor.toml  README.md
solana/migrations/: deploy.ts
solana/programs/arcium_pixels/: Cargo.toml
solana/programs/arcium_pixels/src/: lib.rs
