[package]
name = "arcium_pixels"
version = "0.1.0"
description = "Arcium Pixels Anchor program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arcium_pixels"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
